--- a/prepros.config
+++ b/prepros.config
@@ -949,6 +949,23 @@
         }
       },
       {
+        "file": "scss/btn.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "scss/header.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/hero.scss",
         "config": {
           "tasks": {
