--- a/prepros.config
+++ b/prepros.config
@@ -951,7 +951,24 @@
       {
         "file": "scss/btn.scss",
         "config": {
-          "autoCompile": false
+          "autoCompile": false,
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/features.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
         }
       },
       {
