--- a/prepros.config
+++ b/prepros.config
@@ -82,7 +82,7 @@
       "timeout": 20000,
       "autoUpload": false,
       "reuseConnection": true,
-      "connectionType": "ftp",
+      "connectionType": "sftp",
       "history": []
     },
     "packages": {
@@ -949,6 +949,39 @@
         }
       },
       {
+        "file": "scss/benefit.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/benefits-section.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/benefits.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/btn.scss",
         "config": {
           "autoCompile": false,
@@ -973,6 +1006,17 @@
       },
       {
         "file": "scss/header.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/headline.scss",
         "config": {
           "tasks": {
             "autoprefixer": {
@@ -1015,6 +1059,18 @@
             }
           },
           "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/section.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true,
+          "autoCompile": false
         }
       }
     ]
