--- a/prepros.config
+++ b/prepros.config
@@ -1062,6 +1062,28 @@
         }
       },
       {
+        "file": "scss/reviews-section.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/reviews.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/section.scss",
         "config": {
           "tasks": {
