--- a/prepros.config
+++ b/prepros.config
@@ -1005,6 +1005,18 @@
         }
       },
       {
+        "file": "scss/form.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true,
+          "autoCompile": false
+        }
+      },
+      {
         "file": "scss/header.scss",
         "config": {
           "tasks": {
@@ -1039,6 +1051,17 @@
         }
       },
       {
+        "file": "scss/interactive-avatar.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/layout.scss",
         "config": {
           "tasks": {
@@ -1056,6 +1079,28 @@
           "tasks": {
             "minify-css": {
               "enable": true
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/order-section.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/radio.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
             }
           },
           "sourceMap": true
