--- a/prepros.config
+++ b/prepros.config
@@ -1005,6 +1005,17 @@
         }
       },
       {
+        "file": "scss/fixed-menu.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/form.scss",
         "config": {
           "tasks": {
