--- a/prepros.config
+++ b/prepros.config
@@ -216,6 +216,7 @@
         "allowWildcardImports": false,
         "indentWidth": 2,
         "linefeed": "lf",
+        "removeCharset": false,
         "sourceMap": false
       },
       "haml": {
@@ -353,6 +354,7 @@
         "outputStyle": "expanded",
         "precision": 10,
         "sourceMap": false,
+        "removeCharset": false,
         "sourceComments": false
       },
       "png": {
@@ -1071,6 +1073,17 @@
         }
       },
       {
+        "file": "scss/footer-section.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/form.scss",
         "config": {
           "tasks": {
@@ -1151,6 +1164,17 @@
         }
       },
       {
+        "file": "scss/map.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/media.scss",
         "config": {
           "tasks": {
@@ -1215,6 +1239,28 @@
           },
           "sourceMap": true,
           "autoCompile": false
+        }
+      },
+      {
+        "file": "scss/socials.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/sprite-icons.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
         }
       }
     ]
