burger-menu test

--- a/prepros.config
+++ b/prepros.config
@@ -23,7 +23,7 @@
     "watcher": {
       "enable": true,
       "maxFiles": 2000,
-      "usePolling": false,
+      "usePolling": true,
       "pollingInterval": 500,
       "extensions": [
         ".html",
@@ -1051,6 +1051,17 @@
         }
       },
       {
+        "file": "scss/compound.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/features.scss",
         "config": {
           "tasks": {
@@ -1186,6 +1197,17 @@
         }
       },
       {
+        "file": "scss/menu.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/order-section.scss",
         "config": {
           "tasks": {
@@ -1193,6 +1215,29 @@
               "enable": false
             }
           },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/phone.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/product.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "autoCompile": false,
           "sourceMap": true
         }
       },
@@ -1231,6 +1276,18 @@
       },
       {
         "file": "scss/section.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true,
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "scss/slider.scss",
         "config": {
           "tasks": {
             "autoprefixer": {
