модальное окно, валидация, отправка запроса и обработка ответа

--- a/prepros.config
+++ b/prepros.config
@@ -1107,6 +1107,28 @@
         }
       },
       {
+        "file": "scss/fullscreen-menu.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/hamburger.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true
+        }
+      },
+      {
         "file": "scss/header.scss",
         "config": {
           "tasks": {
@@ -1205,6 +1227,18 @@
             }
           },
           "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/modal.scss",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          },
+          "sourceMap": true,
+          "autoCompile": false
         }
       },
       {
