--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "player",
+  "name": "chocco",
   "version": "1.0.0",
   "main": "gulpfile.js",
   "scripts": {
@@ -15,23 +15,25 @@
     "browser-sync": "^2.29.1",
     "cross-env": "^7.0.3",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-if": "^3.0.0",
-    "gulp-px2rem-converter": "^1.6.0",
+    "gulp-px2rem-converter": "^1.5.4",
     "gulp-rm": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprite": "^2.0.3",
-    "gulp-svgo": "^2.2.1",
+    "gulp-svgo": "^1.2.5",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.62.1"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
+    "bxslider": "^4.2.14",
     "jquery": "^3.6.4",
     "normalize.css": "^8.0.1"
   },
